--- a/NetCoreWebAPIcLientAuth/appsettings.json
+++ b/NetCoreWebAPIcLientAuth/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "Issuer": "https://localhost:7296",
+    "Audience": "https://localhost:7296",
+    "SigningKey": "testapp71331"
+  }
 }
